# korupnesia

./: .gitignore  Makefile  pyproject.toml
scripts/: dispatcher.py  parse.js  parse.py  parsed_koruptor_data_example.json
shared/: configured_logger.py
src/: dispatcher.py  main.py  parse.py  parser.py
src/lib/: __init__.py  get_pic.py  parse_data.py  scrape.py
src/lib/shared/: __init__.py
src/shared/: configured_logger.py
